[tool.poetry]
name = "vignere_cipher"
version = "0.1.0"
description = "encrypt and decipher messages with vignere cipher"
authors = ["sushantpadha <24b1057@iitb.ac.in>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
argparse = "^1.4.0"

[tool.poetry.scripts]
vignere_cipher = "vignere_cipher.__main__:main"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
